Updated login page with signup link

--- a/html/Login_account.html
+++ b/html/Login_account.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../css/Login.css">
+    <link rel="stylesheet" href="../css/Login_account.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <div class="login-box">
             <h1>GroupGrade</h1>
+
             <label for="email">Email</label>
             <input type="email" id="email" placeholder="Enter your email">
+
             <label for="password">Password</label>
-            <input type="password" id="password" placeholder="Enter your password">
+            <div class="password-container">
+                <input type="password" id="password" placeholder="Enter your password">
+                <i class="fa-solid fa-eye toggle-password" onclick="togglePassword()"></i>
+            </div>
+
             <button class="sign-in">Sign In</button>
+            <p class="signup-text">Don't have an account? <a href="signup.html" class="signup-link">Sign up here</a></p>
         </div>
 
         <div class="divider"></div>
@@ -24,6 +32,8 @@
             <h2>Log In</h2>
         </div>
     </div>
-
+    <script src="../js/Login_account.js"></script>
 </body>
 </html>
+
+
