--- a/html/student_dashboard.html
+++ b/html/student_dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>student-dashboard</title>
-    <link rel="stylesheet" href="../css/student-dashboard.css">
+    <link rel="stylesheet" href="../css/student_dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>  
@@ -58,7 +58,7 @@
         </section>
     </main>
 
-    <script src="/js/student dashboard.js"></script>
+    <script src="../js/student_dashboard.js"></script>
 
 </body>
 </html>
