--- a/html/student_form_view .html
+++ b/html/student_form_view .html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student-form view</title>
-    <link rel="stylesheet" href="../css/student-form view .css">
+    <link rel="stylesheet" href="../css/student_form_view .css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -100,6 +100,6 @@
         <button class="submit-btn">Submit</button>
     </div>
 
-    <script src="/js/student form view .js"></script>
+    <script src="../js/student_form_view .js"></script>
 </body>
 </html>
