--- a/html/teacher_complete_form_view.html
+++ b/html/teacher_complete_form_view.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher-complete-form-view</title>
-    <link rel="stylesheet" href="../css/teacher-complete-form-view.css">
+    <link rel="stylesheet" href="../css/teacher_complete_form_view.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -103,6 +103,6 @@
         <p id="student-grades"></p>
 
 
-    <script src="/js/teacher complete form view.js"></script>
+    <script src="../js/teacher_complete_form_view.js"></script>
 </body>
 </html>
