--- a/html/Login_account.html
+++ b/html/Login_account.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="../css/Login_account.css">
+    <link rel="stylesheet" href="../css/login_account.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -32,7 +32,7 @@
             <h2>Log In</h2>
         </div>
     </div>
-    <script src="../js/Login_account.js"></script>
+    <script src="../js/login_account.js"></script>
 </body>
 </html>
 
