--- a/html/Register_account.html
+++ b/html/Register_account.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register-account</title>
-    <link rel="stylesheet" href="../css/Register_account.css">
+    <link rel="stylesheet" href="../css/register_account.css">
 </head>
 <body>
     <div class="container">
