--- a/html/Teacher_Dashboard.html
+++ b/html/Teacher_Dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher-Dashboard</title>
-    <link rel="stylesheet" href="../css/Teacher_Dashboard.css">
+    <link rel="stylesheet" href="../css/teacher_dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-<script src="../js/Teacher_dashboard.js"></script>
+<script src="../js/teacher_dashboard.js"></script>
 
 </body>
 </html>
