Made login and register pages responsive

--- a/html/Login_account.html
+++ b/html/Login_account.html
@@ -22,7 +22,7 @@
             </div>
 
             <button class="sign-in">Sign In</button>
-            <p class="signup-text">Don't have an account? <a href="signup.html" class="signup-link">Sign up here</a></p>
+            <p class="signup-text">Don't have an account? <a href="/html/register_account.html" class="signup-link">Sign up here</a></p>
         </div>
 
         <div class="divider"></div>
