--- a/design_colour_scheme.html
+++ b/design_colour_scheme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Design-Colour-Scheme</title>
-    <link rel="stylesheet" href="/css/design_colour_scheme.css">
+    <link rel="stylesheet" href="./css/design_colour_scheme.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -86,6 +86,6 @@
             </div>
         </section>
     </main>
-    <script src="/js/colour_scheme.js"></script>
+    <script src="./js/colour_scheme.js"></script>
 </body>
 </html>
