--- a/teacher_create_submission.html
+++ b/teacher_create_submission.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher-Create-Submission</title>
-    <link rel="stylesheet" href="/css/teacher_create_submission.css">
+    <link rel="stylesheet" href="./css/teacher_create_submission.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -83,6 +83,6 @@
     
         <button class="submit-btn">Create and Send</button>
     </div>
-   <script src="/js/submission_form.js"></script>
+   <script src="./js/submission_form.js"></script>
 </body>
 </html>
