Updated headers to maintain consistency

--- a/design_colour_scheme.html
+++ b/design_colour_scheme.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
-    
+
     <header>
         <div class="navbar">
             <h1>GroupGrade</h1>
+            <div class="welcome">Welcome, User</div>
             <div class="user-menu">
                 <button id="user-btn" class="profile-icon">
                     <i class="fa-solid fa-user"></i> 
@@ -26,6 +27,7 @@
             </div>
         </div>
     </header>
+
     
     <main>
         <section>
