--- a/student_form_view.html
+++ b/student_form_view.html
@@ -8,24 +8,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
+
     <header>
-        <nav class="navbar">
-            <button class="nav-icon home-icon">
-                <i class="fa-solid fa-house"></i>
-            </button>
-            <h1 class="logo">GroupGrade</h1>
-            <button id="user-btn" class="nav-icon profile-icon">
-                <i class="fa-solid fa-user"></i>
-            </button>
-            <div class="dropdown-menu" id="dropdown-menu">
-                <p class="dropdown-user">User</p>
-                <hr>
-                <button class="logout-btn">
-                    <i class="fa-solid fa-right-to-bracket"></i> Log Out
+        <div class="navbar">
+            <h1>GroupGrade</h1>
+            <div class="welcome">Welcome, User</div>
+            <div class="user-menu">
+                <button id="user-btn" class="profile-icon">
+                    <i class="fa-solid fa-user"></i> 
                 </button>
+                <div class="dropdown-menu" id="dropdown-menu">
+                    <p class="dropdown-user">User</p>
+                    <hr>
+                    <button class="logout-btn">
+                        <i class="fa-solid fa-right-to-bracket"></i> Log Out
+                    </button>
+                </div>
             </div>
-        </nav>
+        </div>
     </header>
+
 
 
 
